@@ -24,6 +24,7 @@ REQUIREMENTS
    - Auth_SASL 1.0.6 or newer
    - Net_Sieve 1.3.2 or newer (for managesieve plugin)
    - Crypt_GPG 1.6.0 or newer (for enigma plugin)
+   - Endroid/QrCode 1.6.0 or newer (https://github.com/endroid/QrCode)
 * php.ini options (see .htaccess file):
    - error_reporting E_ALL & ~E_NOTICE & ~E_STRICT
    - memory_limit > 16MB (increase as suitable to support large attachments)
