@@ -21,6 +21,7 @@
   </div>
   <p>
     <roundcube:button command="edit" type="input" class="button" label="editcontact" condition="!ENV:readonly" />
+    <roundcube:button command="qrcode" type="input" class="button" label="qrcode" />
   </p>
 </div>
 <script type="text/javascript">rcube_init_tabs('contacttabs')</script>
