@@ -25,6 +25,7 @@
 
 <div id="headerbuttons" class="formbuttons">
 	<roundcube:button command="edit" type="input" class="button mainaction" label="editcontact" condition="!ENV:readonly" />
+	<roundcube:button command="qrcode" type="input" class="button" label="qrcode" />
 </div>
 
 <roundcube:include file="/includes/footer.html" />
