@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Possibility to display QR code for contacts data (#5030)
 - Added identicon plugin
 - Widescreen layout aka three column view (#5093)
 - Unify automatic marking as \Seen in preview pane, full-page and extwin views (#5071)
